--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,162 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$examenBancoUnion-primary: mat.define-palette(mat.$indigo-palette);
+$examenBancoUnion-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$examenBancoUnion-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$examenBancoUnion-theme: mat.define-light-theme((color: (primary: $examenBancoUnion-primary,
+        accent: $examenBancoUnion-accent,
+        warn: $examenBancoUnion-warn,
+      )));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($examenBancoUnion-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.card {
+  min-width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputLabel {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+  margin-top: 15px;
+}
+
+.card__content {
+  width: 80%;
+}
+
+label {
+  margin-left: 5px;
+  font-weight: bold;
+}
+
+/* input {
+  min-width: 100px;
+  height: 25px;
+  border-radius: 3px;
+  border: solid 1px gray;
+} */
+input {
+  min-width: 100px;
+  padding: 5px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 7px;
+  background-color: #fff;
+
+}
+
+.card__header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  font-weight: bold;
+  background-color: rgb(219, 141, 52);
+  color: white;
+}
+
+.btn {
+  border-radius: 24px;
+  margin: 1em 0.5em;
+  padding: 1em 2em;
+  border: none;
+  color: white;
+
+  &--simple {
+    background-color: rgb(102, 118, 189);
+  }
+
+  &--primary {
+    background-color: rgb(219, 141, 52);
+  }
+
+  &--icon {
+    background-color: black;
+  }
+}
+
+.headerGeneric {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: normal;
+  font-size: inherit;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+a.custom-link {
+  color: blue;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 15px;
+  text-align: center;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.logo{
+  display: flex;
+
+  align-items: center;
+}
+.sublogo{
+  margin-left: 50px;
+}
+.footer{
+  width: 87%;
+
+  display: flex;
+  justify-content: space-between;
+}
